# exoticdev.github.io

./: 404.md  CNAME  README.md  about.html  about.md  archive.html  contact.html  contact.md  exoticdev.cabal  index.html  site.hs  sitemap.xml
404/: index.html
about/: index.html
archive/: index.html
assets/css/: default.css
backblog/: index.html
blog/: index.html
contact/: index.html
css/: default.css
example/: index.html
pages/: 404.md  about.md  contact.md
posts/: 2015-08-23-example.html  2015-08-23-example.md  2017-10-31-backblog.md  2017-12-13-create-your-next-website-in-haskell.md  2017-12-13-create-your-website-in-haskell.md  2017-12-13-develop-your-site-in-haskell-using-heist-stack-docker.md
src/: Site.hs
src/Site/: TableOfContents.hs
templates/: default.html  post.html  sitemap.xml
