name:                exoticdev
version:             0.1.0.0
synopsis:            Personal Blog
description:         Personal Blog
homepage:            https://exoticdev.com/
license:             BSD3
license-file:        LICENSE
author:              Alexandre Lucchesi
maintainer:          alexandrelucchesi@gmail.com
copyright:           2017 Alexandre Lucchesi
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable exoticdev
  hs-source-dirs:      src/
  main-is:             Site.hs
  other-modules:       Site.TableOfContents
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
  build-depends:       base >= 4.7 && < 5
                     , hakyll
                       -- Custom dependencies
                     , blaze-html
                     , filepath
                     , pandoc
                     , pandoc-types
                     , containers
